--- a/app/scss/sections/_content-features.scss
+++ b/app/scss/sections/_content-features.scss
@@ -574,10 +574,11 @@ body.stpaul-oneCommunity #content .content-body {
 					text-align: center;
 
 					.finder-nav {
-						padding-bottom: 15px;
-						margin: 15px 0 10px;
+						// padding-bottom: 15px;
+						// margin: 15px 0 10px;
+						margin: 20px 0;
 						text-align: center;
-						border-bottom: 1px solid $col-grey;
+						// border-bottom: 1px solid $col-grey;
 
 						a {
 							padding: 5px 15px;
