--- a/app/scss/sections/_hero.scss
+++ b/app/scss/sections/_hero.scss
@@ -494,7 +494,7 @@ body #content {
 		.group-img {
 			display: block;
 			position: relative;
-			background: $col-grey-d;//$col-grey-l;
+			background: $col-grey-l;//$col-grey-d;//
 			width: 100%;
 			height: 100%;
 			line-height: 0;
@@ -527,7 +527,7 @@ body #content {
 				margin: 15px 0;
 
 				a {
-					font-weight: 400;
+					font-weight: 700;
 					color: $col-white;
 
 					&:active {
